@@ -11,12 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        # TODO: something is wrong with TCC, Multiboot 2 info tag struct size
-        cc:
-          - exe: 'gcc'
-          - exe: 'clang'
-          - exe: 'tcc'
-            flags: '--without-multiboot2'
+        cc: ['gcc', 'clang', 'tcc']
         opt: ['', '-O0', '-O3']
     steps:
       - uses: actions/checkout@v2
@@ -25,7 +20,7 @@ jobs:
       - name: autogen
         run: ./autogen.sh
       - name: configure
-        run: ./configure --enable-tests --enable-tests-python ${{matrix.cc.flags}} CC='${{matrix.cc.exe}}' CFLAGS='${{matrix.opt}}'
+        run: ./configure --enable-tests --enable-tests-python CC='${{matrix.cc}}' CFLAGS='${{matrix.opt}}'
       - name: make
         run: make
       - name: check
