@@ -9,6 +9,10 @@
 #include "multiboot2_info_example1.h"
 #include "multiboot2_info_example2.h"
 
+#ifdef __TINYC__
+#pragma pack(push, 1)
+#endif
+
 /************
  * Tag_None *
  ************/
@@ -773,6 +777,10 @@ static const struct {
         },
     },
 };
+
+#ifdef __TINYC__
+#pragma pack(pop)
+#endif
 
 /********
  * main *
